--- a/html/template/default/assets/css/style.css
+++ b/html/template/default/assets/css/style.css
@@ -9195,11 +9195,11 @@ Styleguide 22.1
   }
 
   .form-group {
-      margin-bottom: 1rem;
+      margin-bottom: 4rem;
   }
 
   .font-weight-light {
-      font-weight: 300!important;
+    font-weight: 300!important;
   }
 
   .has-search .form-control {
@@ -9262,6 +9262,9 @@ Styleguide 22.1
       color: #fff!important;
   }
 
+  .box-customer-title{
+    margin-bottom: 10px;
+  }
   /*gift-bottom*/
   .btn-open-modal, .btn-black {
     background-color: #A4ACC5;
@@ -9286,6 +9289,11 @@ Styleguide 22.1
       z-index: 1030;
   }
 
+  .gift-footer-background {
+    height: 15px;
+    background-color: #A964A5;
+  }
+
   .text-white {
     color: #fff!important;
   }
@@ -9298,4 +9306,110 @@ Styleguide 22.1
     padding-left: 14px;
     padding-right: 13px;
   }
+
+  #list_customer {
+    max-height: calc(100vh - 403px);
+    overflow-y: auto;
+    padding-right: 10px;
+  }
+
+  .ec-layoutRole .ec-layoutRole__contents[data-status="page_mypage_thanks_registration"]{
+    max-width: none;
+  }
+
+  /* Popup message box */
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    outline: 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  .show{
+    display: none;
+  }
+  
+  .modal-open .modal {
+    overflow-y: hidden !important;
+  }
+
+  .modal-open .modal {
+      overflow-x: hidden;
+      overflow-y: auto;
+  }
+  
+  .fade {
+      transition: opacity .15s linear;
+  }
+
+  .modal-content {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 0.3rem;
+    outline: 0;
+  }
+
+  .border-bottom-0 {
+    border-bottom: 0!important;
+  }
+
+  .modal-dialog-centered {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: calc(100% - 1rem);
+  }
+
+  .modal-header {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: start;
+      -ms-flex-pack: justify;
+      justify-content: flex-end;
+      padding: 1rem 1rem 0 1rem;
+      border-bottom: 1px solid #dee2e6;
+      border-top-left-radius: calc(0.3rem - 1px);
+      border-top-right-radius: calc(0.3rem - 1px);
+  }
+
+  .modal-body {
+    position: relative;
+    padding: 15px;
+    padding-top: 0;
+    margin-bottom: 30px;
+  }
+
+  .gift-modal-footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 56px;
+  }
+
+  .gift-modal-footer .btn-go-mypage {
+    border-bottom-left-radius: calc(0.3rem - 1px);
+  }
+
+  .btn-go-mypage {
+      background-color: #7C1CA4;
+      font-size: 14px;
+      line-height: 19px;
+      outline: none !important;
+  }
+
 /*# sourceMappingURL=maps/style.css.map */
